--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -56,22 +56,22 @@ jobs:
           cd android && ./gradlew bundleRelease --no-daemon
 
         ## sign generate apk using github secrets
-      - name: Sign App Bundle
-        id: sign_app
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: android/app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
-          alias: ${{ secrets.ANDROID_ALIAS }}
-          keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+      # - name: Sign App Bundle
+      #   id: sign_app
+      #   uses: r0adkll/sign-android-release@v1
+      #   with:
+      #     releaseDirectory: android/app/build/outputs/bundle/release
+      #     signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+      #     alias: ${{ secrets.ANDROID_ALIAS }}
+      #     keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
+      #     keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
 
-      ## upload artifact to action
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: Gakko App Bundle
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+      # ## upload artifact to action
+      # - name: Upload Artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Gakko App Bundle
+      #     path: ${{steps.sign_app.outputs.signedReleaseFile}}
 
       # ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
       # - name: upload artifact to Firebase App Distribution
