--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -84,10 +84,12 @@ jobs:
 
       ## upload abb to google play  using https://github.com/r0adkll/upload-google-play
       ## Distribute  App
+      - name: Create service_account.json
+        run: echo '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}' > service_account.json
       - name: Upload App to Google Play
         uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}
+          serviceAccountJson: service_account.json
           packageName: com.example
           releaseFiles: android/app/build/outputs/bundle/release/*.aab
           track: internal
