--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -55,34 +55,16 @@ jobs:
         run: |
           cd android && ./gradlew bundleRelease --no-daemon
 
-        ## sign generate apk using github secrets
-      # - name: Sign App Bundle
-      #   id: sign_app
-      #   uses: r0adkll/sign-android-release@v1
-      #   with:
-      #     releaseDirectory: android/app/build/outputs/bundle/release
-      #     signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
-      #     alias: ${{ secrets.ANDROID_ALIAS }}
-      #     keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
-      #     keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+      - name: Sign App Bundle
+        id: sign_app
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: android/app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+          alias: ${{ secrets.ANDROID_ALIAS }}
+          keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
 
-      # ## upload artifact to action
-      # - name: Upload Artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: Gakko App Bundle
-      #     path: ${{steps.sign_app.outputs.signedReleaseFile}}
-
-      # ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
-      # - name: upload artifact to Firebase App Distribution
-      #   uses: wzieba/Firebase-Distribution-Github-Action@v1
-      #   with:
-      #     appId: ${{secrets.ANDROID_FIREBASE_APP_ID}}
-      #     token: ${{secrets.ANDROID_FIREBASE_TOKEN}}
-      #     groups: testers
-      #     file: ${{steps.sign_app.outputs.signedReleaseFile}}
-
-      ## upload abb to google play  using https://github.com/r0adkll/upload-google-play
       ## Distribute  App
       - name: Create service_account.json
         run: echo '${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}' > service_account.json
@@ -90,7 +72,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
-          packageName: com.example
+          packageName: com.ebook
           releaseFiles: android/app/build/outputs/bundle/release/*.aab
           track: internal
           inAppUpdatePriority: 2
