--- a/package.json
+++ b/package.json
@@ -91,6 +91,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/username/your-repo.git"
+    "url": "git+https://github.com/NasserBvB/eBook.git"
   }
 }
