chore: last stable version

--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "eBook",
-  "displayName": "eBook"
+  "displayName": "eBook",
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-6750790982638800~9360165216",
+    "ios_app_id": "ca-app-pub-6750790982638800~9360165216"
+  }
 }
