--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-hook-form": "^7.29.0",
     "react-native": "0.68.1",
     "react-native-bootsplash": "^4.1.4",
+    "react-native-dialog": "^9.2.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-exception-handler": "^2.10.10",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-mobile-ads": "^7.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.2.1",
     "react-native-mmkv": "^2.3.1",
@@ -40,6 +42,7 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-native-timer-hooks": "^1.0.0",
     "react-query": "^3.34.19",
     "yup": "^0.32.11",
     "zustand": "^3.7.2"
