chore: change app icon and splash screen

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "eBook",
-  "displayName": "eBook",
+  "displayName": "Flag me",
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-6750790982638800~9360165216",
     "ios_app_id": "ca-app-pub-6750790982638800~9360165216"
